<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:paddingBottom="@dimen/margin_maior"
    android:paddingLeft="@dimen/margin_maior"
    android:paddingRight="@dimen/margin_maior"
    android:paddingTop="@dimen/margin_maior"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@drawable/side_nav_bar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_senha_02_foreground"
        android:paddingTop="@dimen/margin_menor"
        android:contentDescription="@string/navigation_header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_menor"
        android:textSize="18sp"
        android:text="@string/titulo"
        android:textColor="@color/teal_200"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:layout_margin="@dimen/margin_menor"
        android:text="@string/menu"
        android:textColor="@color/teal_200"/>
</LinearLayout>