<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Cabeçalho de pesquisa -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_menor"
        app:cardCornerRadius="@dimen/margin_menor"
        app:cardElevation="@dimen/margin_menor"
        android:backgroundTint="@color/purple_500">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_senha_02_foreground"
            android:layout_margin="@dimen/margin_menor"
            android:contentDescription="@string/logo_do_aplicativo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_maior"
                android:text="@string/listar_senha_titulo"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/teal_200"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText
            android:id="@+id/editPesquisaTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="@dimen/margin_menor"
            android:layout_marginStart="@dimen/margin_maior"
            android:layout_marginEnd="@dimen/margin_maior"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:hint="@string/pesquise_por_titulo_edit"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/teal_200"
            />

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/lvSenha"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_maior"/>


</androidx.appcompat.widget.LinearLayoutCompat>